tests/paczka1/small_fuzzy/35151246.err
Error in line 2: A395 S104 19,1
Error in line 8: A395 A395 58,9
Error in line 7: yZhKJjb S104 96,2
